commit-to-deploy/manifests/myapp-staging.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: myapp-staging
