commit-to-deploy/manifests/myapp.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: myapp
