commit-to-deploy/manifests/drone.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone
  namespace: default
  labels:
    app: drone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone
  template:
    metadata:
      labels:
        app: drone
    spec:
      containers:
        - name: drone
          image: drone/drone:1.0.0
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - mountPath: /data
              name: drone
      volumes:
      - name: drone
        persistentVolumeClaim:
          claimName: drone
---
apiVersion: v1
kind: Service
metadata:
  name: drone
  namespace: default
spec:
  selector:
    app: drone
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: drone
  namespace: default
spec:
 rules:
 - host: drone.192.168.39.43.xip.io
   http:
     paths:
     - path: /
       backend:
         serviceName: drone
         servicePort: http
