commit-to-deploy/manifests/registry.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: default
  labels:
    app: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
        - name: registry
          image: registry
          ports:
            - containerPort: 5000
              name: http
          volumeMounts:
            - mountPath: /data
              name: registry
      volumes:
      - name: registry
        persistentVolumeClaim:
          claimName: registry
---
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: default
spec:
  selector:
    app: registry
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: registry
  namespace: default
  annotations:
    nginx.org/client-max-body-size: "100m"
spec:
 rules:
 - host: registry.192.168.39.37.xip.io
   http:
     paths:
     - path: /
       backend:
         serviceName: registry
         servicePort: http
